valid_tests/declarations/test1.go
// Test 1: Basic variable declarations
func main() {
    var x int
    var y, z int
    var a int = 10
    var b, c int = 20, 30
}
