invalid_tests/declarations/test6.go
// Test: Variable redeclaration
func main() {
    var x int = 10
    var x int = 20
}
